--- a/src/app/features/board/board-header/board-search/board-search.scss
+++ b/src/app/features/board/board-header/board-search/board-search.scss
@@ -127,9 +127,15 @@
   }
 }
 
+@media (max-width: 1024px) {
+  .search-container {
+    width: 100%;
+    max-width: 444px;
+  }
+}
 
 @media (max-width: 480px) {
-  .search-container{
-    width: 250px;
+  .search-container {
+    width: 100%; 
   }
-  }
+}
